# fractalexplorer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
app/: App.cpp  ComputeContext.hpp  main.cpp
app/core/: ComputableImage.hpp  CoreLogger.hpp  Evolution.hpp  OpenCL.hpp  OpenCLBackend.cpp  OpenCLBackend.hpp  OpenCLKernelUtils.cpp  OpenCLKernelUtils.hpp  Utility.cpp  Utility.hpp
app/core/clc/: CLC_Definitions.hpp  CLC_NewtonFractal.hpp  CLC_Random.hpp  CLC_Sources.cpp  CLC_Sources.hpp
app/core/glsl/: GLSL_Render.hpp  GLSL_RenderStatisticalClear.hpp  GLSL_Sources.cpp  GLSL_Sources.hpp
app/ui/: ComputableImageWidget.cpp  ComputableImageWidget.hpp  GLCanvas.cpp  GLCanvas.hpp  KernelArgWidget.cpp  KernelArgWidget.hpp  MainWindow.hpp
cmake/: QtDeploy.cmake
installer/: installer.xml  package.xml
src/: main.cpp
